--- a/index.html
+++ b/index.html
@@ -2,32 +2,39 @@
 <html>
   <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-    <style type="text/css">
-      html { height: 100% }
-      body { height: 100%; margin: 0; padding: 0 }
-      #map-canvas { height: 75%; width: 75%; margin: 0 0 0 2em; }
-      #intro { padding-left: 2em;}
-    </style>
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-
-    <script type="text/javascript"
-      src="https://maps.googleapis.com/maps/api/js?sensor=false&key=AIzaSyB3WDbJuoc6iqUEQ7ZkiQWHw6eqO5Os8Zc">
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous">
     </script>
 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
+
+
+
+    <script type="text/javascript"
+      src="https://maps.googleapis.com/maps/api/js?sensor=false">
+    </script>
   </head>
   <body>
+    <div class="card-panel teal lighten-2"> <p>A simple demo that shows how JSON, REST and a little JavaScript could be the start
+      of a capable web application.</p></div>
     <div id="intro">
-      <h3>A simple demo that shows how JSON, REST and a little JavaScript could be the start of a capable web application.</h3>
+
       <label for"lat">Lat:</label>
-      <input id="lat" value="38.8951" placeholder="38.8951" />
+      <input id="lat" value="51.5074" placeholder="38.8951" />
       <label for"lon">Lon:</label>
-      <input id="lon" value="-77.0367" placeholder="-77.0367" />
-      <button id="search">Search</button>
+      <input id="lon" value="0.1278" placeholder="-77.0367" />
+      <button id="search">Search</button> </br>
+
       <div>
         <em>Enter a latitude and longitude to find Flickr photos related to the terms "monument", "statue" or "historical".</em>
       </div>
     </div>
     <div id="map-canvas"/>
+
+
   </body>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
+
   <script src="app.js"></script>
 </html>
