added flickr api

--- a/index.html
+++ b/index.html
@@ -26,15 +26,12 @@
       <button id="search">Search</button> </br>
 
       <div>
-        <em>Enter a latitude and longitude to find Flickr photos related to the terms "monument", "statue" or "historical".</em>
+        <p><em>Enter a latitude and longitude to find Flickr photos.</em></p>
       </div>
-    </div>
-    <div id="map-canvas"/>
-
-
-  </body>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
-
-  <script src="app.js"></script>
-</html>
+      </div>
+      <div id="photo"></div>
+      <div id="map-canvas"/>
+</body>
+    <script type="text/javascript" src="js/materialize.min.js"></script>
+    <script src="app.js"></script>
+  </html>
