--- a/index.html
+++ b/index.html
@@ -29,8 +29,12 @@
         <p><em>Enter a latitude and longitude to find Flickr photos.</em></p>
       </div>
       </div>
+      <div id="map-canvas"> </div>
+
+      <input type="text" name="Search" value=""><br>
+      <button id="search"> Search for Flickr photos</button> </br>
       <div id="photo"></div>
-      <div id="map-canvas"/>
+
 </body>
     <script type="text/javascript" src="js/materialize.min.js"></script>
     <script src="app.js"></script>
