--- a/index.html
+++ b/index.html
@@ -15,26 +15,26 @@
     </script>
   </head>
   <body>
-    <div class="card-panel teal lighten-2"> <p>A simple demo that shows how JSON, REST and a little JavaScript could be the start
-      of a capable web application.</p></div>
+    <div class="card-panel teal lighten-2"> <h4>Flickr API/Google API.</h4></div>
+    <div id="top-content">
     <div id="intro">
 
       <label for"lat">Lat:</label>
-      <input id="lat" value="51.5074" placeholder="38.8951" />
+      <center><input id="lat" value="51.5074" placeholder="38.8951" /> </center>
       <label for"lon">Lon:</label>
-      <input id="lon" value="0.1278" placeholder="-77.0367" />
-      <button id="search">Search</button> </br>
-
-      <div>
-        <p><em>Enter a latitude and longitude to find Flickr photos.</em></p>
-      </div>
-      </div>
+      <center><input id="lon" value="0.1278" placeholder="-77.0367" /></center>
+    </div>
+      <button id="search">Search</button></br>
+    <div>
+      <p><em>Enter a latitude and longitude to find Flickr photos.</em></p>
+    </div>
       <div id="map-canvas"> </div>
 
       <input type="text" name="Search" value=""><br>
       <button id="search"> Search for Flickr photos</button> </br>
+    <div>
       <div id="photo"></div>
-
+    </div>
 </body>
     <script type="text/javascript" src="js/materialize.min.js"></script>
     <script src="app.js"></script>
